# rust_os

./: Cargo.toml  README.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: linked_list.rs
tests/: heap_allocation.rs  should_panic.rs  stack_overflow.rs
