[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2" # use for port I/O abstraction
uart_16550 = "0.2.0" # send test output to terminal via serial port
pic8259 = "0.10.1" # PIC for hardware interrupts
pc-keyboard = "0.5.0" # translate key-codes

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# exit automatically after tests
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio", # enable serial
    "-display", "none"] # hide qemu for tests
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 60

[[test]]
name = "should_panic" # single function test does not need test_runner
harness = false

[[test]]
name = "stack_overflow"
harness = false
